--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^5.8.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -47,7 +48,10 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.5.4",
